--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
       "no-multi-assign": "off",
       "no-param-reassign": ["error", { "props": false }],
       "no-trailing-spaces":"off",
+      "linebreak-style": "off",
       "strict": "off"
     }
   }
