--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
       "no-param-reassign": ["error", { "props": false }],
       "no-trailing-spaces":"off",
       "linebreak-style": "off",
+      "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
       "strict": "off"
     }
   }
