--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "jest --coverage"
   },
   "keywords": [],
@@ -16,7 +17,14 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jest": "^21.15.0",
-    "jest": "^22.4.3"
+    "eslint-plugin-jest": "^21.15.1",
+    "jest": "^22.4.3",
+    "nodemon": "^1.17.3",
+    "superagent": "^3.8.2"
+  },
+  "dependencies": {
+    "cowsay": "^1.3.0",
+    "dotenv": "^5.0.1",
+    "winston": "^3.0.0-rc5"
   }
 }
