--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "cowsay": "^1.3.0",
     "dotenv": "^5.0.1",
+    "queue-fifo": "^0.2.4",
     "winston": "^3.0.0-rc5"
   }
 }
