--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cowsay": "^1.3.0",
     "dotenv": "^5.0.1",
     "queue-fifo": "^0.2.4",
+    "stack-lifo": "^0.1.5",
     "winston": "^3.0.0-rc5"
   }
 }
