--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "jest --coverage"
+    "test": "jest --coverage --forceExit --runInBand --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
-    "jest": "^22.4.3",
+    "jest": "^22.4.4",
     "nodemon": "^1.17.3",
     "superagent": "^3.8.2"
   },
